--- a/xilinxfloat.cabal
+++ b/xilinxfloat.cabal
@@ -24,6 +24,7 @@ common common-options
     KindSignatures
     LambdaCase
     NoStarIsType
+    NumericUnderscores
     PolyKinds
     RankNTypes
     ScopedTypeVariables
@@ -64,9 +65,10 @@ common common-options
     text,
     pretty-show,
     ieee754,
+    template-haskell,
 
     -- clash-prelude will set suitable version bounds for the plugins
-    clash-prelude >= 1.2.5 && < 1.6,
+    clash-prelude >= 1.6.2 && < 1.8,
     ghc-typelits-natnormalise,
     ghc-typelits-extra,
     ghc-typelits-knownnat
@@ -80,8 +82,11 @@ custom-setup
 
 library
   import: common-options
-  hs-source-dirs: src
---   exposed-modules:
+  hs-source-dirs: ../clash-compiler/tests/shouldwork/Cores/Xilinx
+  exposed-modules:
+    Floating
+    Floating.Annotations
+    Floating.TH
   default-language: Haskell2010
 
 -- Builds the executable 'clash', with xilinxfloat project in scope
@@ -126,6 +131,6 @@ test-suite test-library
     xilinxfloat,
     QuickCheck,
     hedgehog,
-    tasty >= 1.2 && < 1.3,
+    tasty >= 1.2 && < 1.5,
     tasty-hedgehog,
     tasty-th
