--- a/xilinxfloat.cabal
+++ b/xilinxfloat.cabal
@@ -66,6 +66,7 @@ common common-options
     pretty-show,
     ieee754,
     template-haskell,
+    HaskellForMaths,
 
     -- clash-prelude will set suitable version bounds for the plugins
     clash-prelude >= 1.6.2 && < 1.8,
@@ -87,6 +88,7 @@ library
     Floating
     Floating.Annotations
     Floating.TH
+    SplitMaxLen
     PhysTB
   default-language: Haskell2010
 
@@ -105,6 +107,20 @@ executable clashi
   if !os(Windows)
     ghc-options: -dynamic
   build-depends: base, clash-ghc, xilinxfloat
+
+executable splitmaxlen
+  main-is: bin/SplitMaxLen.hs
+  default-language: Haskell2010
+  if !os(Windows)
+    ghc-options: -dynamic
+  build-depends: base, xilinxfloat
+
+executable splitmaxlenfloat
+  main-is: bin/SplitMaxLenFloat.hs
+  default-language: Haskell2010
+  if !os(Windows)
+    ghc-options: -dynamic
+  build-depends: base, xilinxfloat
 
 test-suite doctests
   import:           common-options
